fixed some issues with the reports params and viewing on IE

--- a/web/src/main/webapp/css/jsDropdown/dropdownchecklist.css
+++ b/web/src/main/webapp/css/jsDropdown/dropdownchecklist.css
@@ -1,6 +1,3 @@
-/** Minimal stand-alone css for dropdownchecklist support
-    We highly recommend using JQuery ThemeRoller instead  
-*/
 .ui-dropdownchecklist {
 	font-size: 10px;
 	color: black;
@@ -22,9 +19,12 @@
 }
 .ui-dropdownchecklist-item {
 }
+
 .ui-state-hover {
 	background-color: #39f;
+	margin:0;
 }
+
 .ui-state-disabled label {
 	color: #ccc;
 }
@@ -44,3 +44,11 @@
 .ui-dropdownchecklist-group {
 	padding: 1px 1px 1px 3px;
 }
+
+
+/* states and images */
+.ui-icon { display: block; text-indent: -99999px; overflow: hidden; background-repeat: no-repeat; }
+.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_222222_256x240.png); }
+
+.ui-icon-triangle-1-n { background-position: 0 -16px; }
+.ui-icon-triangle-1-s { background-position: -64px -16px; }
